# fastapi-backend

./: README.md  pyproject.toml
app/: main.py
app/amqp/: amqp_factory.py  producer.py  worker.py
app/auth/: auth.py
app/cache/: cache_factory.py  locker.py
app/db/: database.py  model.py  schema.py  service.py
app/model/: request_model.py  response_model.py
app/router/: auth.py  task.py  user.py
app/utility/: config.py  exception.py  utils.py
