[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["alex.lin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.2.0"
cryptography = "^43.0.1"
fastapi = "^0.115.0"
logger = "^1.4"
passlib = "^1.7.4"
pika = "^1.3.2"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
pymysql = "^1.1.1"
python-multipart = "^0.0.12"
redis = "^5.1.1"
sqlmodel = "^0.0.22"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
